<resources>
    <string name="app_name">ServiceTest</string>
    <string name="test_start_service_function">Test Start Service</string>
    <string name="test_bound_service_function">Test Bound Service</string>
    <string name="test_messenger_service_function">Test Messenger Service</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="send_message">Send Message</string>
</resources>
