<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/test_start_service_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="150dp"
        android:text="@string/test_start_service_function"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/test_bound_service_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/test_bound_service_function"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/test_messenger_service_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/test_messenger_service_function"
        android:textAllCaps="false" />

</LinearLayout>